create post,get and put method test
