# storage/api-docs/api-docs.json
@@ -76,6 +76,34 @@
                                         "message": {
                                             "type": "string",
                                             "example": "タスクが正常に作成されました"
+                                        },
+                                        "task": {
+                                            "$ref": "#/components/schemas/Task"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "全てのタスク削除",
+                "operationId": "9c128eff9bbcd9b17d214b01cd9869dc",
+                "responses": {
+                    "200": {
+                        "description": "全てのタスクが正常に削除されました",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "全てのタスクが正常に削除されました"
                                         }
                                     },
                                     "type": "object"
@@ -170,6 +198,9 @@
                                         "message": {
                                             "type": "string",
                                             "example": "タスクが正常に更新されました"
+                                        },
+                                        "task": {
+                                            "$ref": "#/components/schemas/Task"
                                         }
                                     },
                                     "type": "object"
